change icon, scrollbar, fix tippy error

--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -23,6 +23,20 @@ body {
     font-size: 1.6rem;
     line-height: 1.5;
     color: var(--text-color);
+    overflow-y: overlay;
+}
+// Scroll bar
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
 }
 button,
 input,
