--- a/src/components/Layout/components/Header/Header.module.scss
+++ b/src/components/Layout/components/Header/Header.module.scss
@@ -4,9 +4,14 @@
     --search-space-height: 9px;
     --search-btn-width: 52px;
 
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0, 0, 0, 0.12);
+    background-color: white;
     display: flex;
     justify-content: center;
 }
