--- a/src/components/Popper/Popper.module.scss
+++ b/src/components/Popper/Popper.module.scss
@@ -5,4 +5,6 @@
     box-shadow: rgb(0 0 0 / 12%) 0px 2px 12px;
     border-radius: 8px;
     padding: 8px 0 4px 0;
+    display: flex;
+    flex-direction: column;
 }
